Fixed bug in profile lists that prevented from profile name to be a link. Added content to readme file about colors and contrasts

--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -16,9 +16,20 @@
   }
   
   .username {
-    margin-left: 10px;
+    margin-left: 1rem;
     font-size: 1.5rem;
     font-weight: 500;
+    color: #333333;
+    transition: color 0.3s ease;
+  }
+
+a {
+  text-decoration: none;
+}
+
+  .username:hover {
+    color: #444444;
+    border-bottom: 2px solid #FFA500;
   }
   
   .FollowButton {
@@ -44,5 +55,3 @@
   padding-left: 10px;  
   padding-right: 10px; 
 }
-
-  
