--- a/src/styles/ScrollUpButton.module.css
+++ b/src/styles/ScrollUpButton.module.css
@@ -8,7 +8,7 @@
 }
 
 .scrollButton {
-    background-color: #ff4500;
+    background-color: #FFA500;
     color: #fff;
     border-radius: 50%;
     width: 4rem;
